--- a/fins/package.json
+++ b/fins/package.json
@@ -13,6 +13,6 @@
   "dependencies": {
     "moment": "^2.29.2",
     "mysql": "^2.18.1",
-    "omron-fins": "^0.5.0"
+    "omron-fins-es6": "^1.0.3"
   }
 }
